--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "phonegap-plugin-push": "^2.2.3",
+    "phonegap-plugin-push": "^2.1.3",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -53,7 +53,7 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "phonegap-plugin-push": {
-        "SENDER_ID": "139476471212"
+        "FCM_VERSION": "11.6.2"
       }
     },
     "platforms": [
