--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.0.0",
+    "cordova-browser": "^5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
@@ -38,6 +39,7 @@
     "phonegap-plugin-push": "^2.1.3",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
+    "underscore": "^1.9.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
       }
     },
     "platforms": [
+      "browser",
       "android"
     ]
   }
